@@ -1,0 +1,24 @@
+###############################################################################
+#    nodoc.plug
+#      it's a part of the rpmrebuild project
+#
+#    Copyright (C) 2005 by Eric Gerbier
+#    Bug reports to: gerbier@users.sourceforge.net
+#      or	   : valery_reznic@users.sourceforge.net
+#    $Id$
+#
+#    This program is free software; you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation; either version 2 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+###############################################################################
+# include file for nodoc plugin
+# allow a quicker use with : rpmrebuild --include nodoc.plug
+
+change-spec-files nodoc.sh
